src/objects/Apttus_Approval__ApprovalsCustomConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds global defaults for context objects processed by the approval engine</description>
    <fields>
        <fullName>Apttus_Approval__ApprovalContextType__c</fullName>
        <defaultValue>&quot;Single&quot;</defaultValue>
        <description>The approval context type associated with the process for the object

Valid Values are:
=============
Single
Multiple</description>
        <inlineHelpText>The approval context type associated with the process for the object

Valid Values are:
=============
Single
Multiple</inlineHelpText>
        <label>Approval Context Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalGroupStatusField__c</fullName>
        <description>The API name of the approval group status field. Only applicable to custom context objects. If not specified, defaults to &quot;Approval_Group_Status__c&quot;.</description>
        <inlineHelpText>The API name of the approval group status field. Only applicable to custom context objects. If not specified, defaults to &quot;Approval_Group_Status__c&quot;.</inlineHelpText>
        <label>Approval Group Status Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalStatusField__c</fullName>
        <description>The API name of the approval status field. Only applicable to custom context objects. If not specified, defaults to &quot;Approval_Status__c&quot;.</description>
        <inlineHelpText>The API name of the approval status field. Only applicable to custom context objects. If not specified, defaults to &quot;Approval_Status__c&quot;.</inlineHelpText>
        <label>Approval Status Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalSummaryPage__c</fullName>
        <description>The name of the approval summary page. This will be the global default if not overridden for the approval process.</description>
        <inlineHelpText>The name of the approval summary page. This will be the global default if not overridden for the approval process.</inlineHelpText>
        <label>Approval Summary Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__AssignmentEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is submitted. This will be the global default if not overridden for the approval process.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an approval request is submitted. This will be the global default if not overridden for the approval process.</inlineHelpText>
        <label>Assignment Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BackupAdminUser__c</fullName>
        <description>The name of backup administrator or leave blank to use the global default.</description>
        <inlineHelpText>The name of backup administrator or leave blank to use the global default.</inlineHelpText>
        <label>Backup Admin User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__CancellationEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is cancelled. This will be the global default if not overridden for the approval process.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an approval request is cancelled. This will be the global default if not overridden for the approval process.</inlineHelpText>
        <label>Cancellation Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ChildObjectTypes2__c</fullName>
        <description>The list of child object types associated with the approval process for the parent object. This list is automatically maintained by the application.</description>
        <inlineHelpText>The list of child object types associated with the approval process for the parent object. This list is automatically maintained by the application.</inlineHelpText>
        <label>Child Object Types2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ChildObjectTypes__c</fullName>
        <description>The list of child object types associated with the approval process for the parent object. This list is automatically maintained by the application.</description>
        <inlineHelpText>The list of child object types associated with the approval process for the parent object. This list is automatically maintained by the application.</inlineHelpText>
        <label>Child Object Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EnableAdhocApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Adhoc Approval is enabled for this object.</description>
        <inlineHelpText>Indicates whether Adhoc Approval is enabled for this object.</inlineHelpText>
        <label>Enable Adhoc Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EscalationEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is escalated. This will be the global default if not overridden for the approval process.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an approval request is escalated. This will be the global default if not overridden for the approval process.</inlineHelpText>
        <label>Escalation Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__MyApprovalsPage__c</fullName>
        <description>Name of the My Approvals page used for showing consolidated approval requests</description>
        <inlineHelpText>Name of the My Approvals page used for showing consolidated approval requests</inlineHelpText>
        <label>My Approvals Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__NotifyOnlyEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when a notify only process step is executed. This will be the global default if not overridden for the approval process.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when a notify only process step is executed. This will be the global default if not overridden for the approval process.</inlineHelpText>
        <label>NotifyOnly Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ParentReferenceField__c</fullName>
        <description>Parent object reference</description>
        <inlineHelpText>Parent object reference</inlineHelpText>
        <label>Parent Reference Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__PreviewPage__c</fullName>
        <description>Name of the Preview page used for showing consolidated approval requests preview</description>
        <inlineHelpText>Name of the Preview page used for showing consolidated approval requests preview</inlineHelpText>
        <label>Preview Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ReassignmentEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is reassigned. This will be the global default if not overridden for the approval process.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an approval request is reassigned. This will be the global default if not overridden for the approval process.</inlineHelpText>
        <label>Reassignment Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ReminderEmailTemplate__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request needs a reminder.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an approval request needs a reminder.</inlineHelpText>
        <label>Reminder Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__UseFilesInsteadOfNotesAndAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the approvals engine will query all attachments from Files instead of Notes&amp;Attachment</description>
        <inlineHelpText>If checked the approvals engine will query all attachments from Files instead of Notes&amp;Attachment</inlineHelpText>
        <label>Use Files Instead of Notes &amp; Attachments</label>
        <type>Checkbox</type>
    </fields>
    <label>Approvals Custom Config</label>
</CustomObject>